chore: fix pixel peeping element alignment

--- a/src/admin/assets/config.css
+++ b/src/admin/assets/config.css
@@ -41,7 +41,7 @@
   flex-wrap: nowrap;
   justify-content: flex-start;
   align-items: center;
-  gap: 5px;
+  gap: 10px;
 }
 
 .mbz-form-line-text {
@@ -92,6 +92,7 @@
 .mbz-switch-input input[type="checkbox"] {
   width: 40px;
   border: none;
+  margin: 0;
   background: #f0f0f0;
   border-radius: 99px;
   height: 20px;
